Added diagnostic flag ShenandoahOOMDuringEvacALot.